<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChoseLoginOrRegister">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="@dimen/_15sdp"
                android:elevation="@dimen/_15sdp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:id="@+id/skip" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_280sdp"
                android:background="@drawable/back"
                android:id="@+id/l1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo" />

            </LinearLayout>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/l1"
    android:textSize="@dimen/_15sdp"
    android:textAllCaps="false"
    android:textColor="#BA8A13"
    android:text="@string/welcome_to_the_lawyer_app"
    android:layout_marginTop="@dimen/_10sdp"
    android:id="@+id/text"/>
     <com.google.android.material.button.MaterialButton
                android:id="@+id/loginemployee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
         android:layout_marginStart="@dimen/_16sdp"
         android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/item_button"
                android:text="@string/Signemployee"
                android:textAllCaps="false"
                android:textColor="#182A41"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:backgroundTintMode="add"
               app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginClint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/item_button"
                android:text="@string/sign_in_as_a_customer"
                android:textAllCaps="false"
                android:textColor="#182A41"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:backgroundTintMode="add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginemployee"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/item_btn_register"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#182A41"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:backgroundTintMode="add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginClint"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/l"
                android:gravity="center"
               app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/_2sdp"


                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/teraninja_logo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/development_by"
                    android:textSize="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textColor="#18A7E0"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/company_tera_ninja_2022"
                    android:layout_gravity="center"
                    android:textColor="#18A7E0"/>





            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>



</layout>