<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewPassword">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_210sdp"
            android:background="@drawable/back"
            android:id="@+id/l1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l1"
            android:textSize="@dimen/_15sdp"
            android:textAllCaps="false"
            android:textColor="#BA8A13"
            android:text="@string/password_recovery"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text"
            android:textSize="@dimen/_10sdp"
            android:textAllCaps="false"
            android:textColor="#17335B"
            android:text="@string/please_enter_the_new_password"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/text2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textColor="#17335B"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="@dimen/_10sdp"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text2"
            android:id="@+id/textcode" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/item_edittext"
            android:paddingStart="@dimen/_3sdp"
            app:layout_constraintTop_toBottomOf="@id/textcode"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start"
            android:id="@+id/numberPhone"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="#17335B"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="@dimen/_10sdp"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numberPhone"
            android:id="@+id/textconfarmpass" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/item_edittext"
            android:paddingStart="@dimen/_3sdp"
            app:layout_constraintTop_toBottomOf="@id/textconfarmpass"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start"
            android:id="@+id/confarmpass"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/item_btn_register"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="#182A41"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:backgroundTintMode="add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confarmpass" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/l"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_2sdp"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:src="@drawable/teraninja_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/development_by"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="#18A7E0" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:text="@string/company_tera_ninja_2022"
                android:layout_gravity="center"
                android:textColor="#18A7E0" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>