<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Register">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_210sdp"
                android:background="@drawable/back"
                android:id="@+id/l1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/l1"
                android:textSize="@dimen/_15sdp"
                android:textAllCaps="false"
                android:textColor="#BA8A13"
                android:text="@string/create_new_account"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="#17335B"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textSize="@dimen/_10sdp"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text"
                android:id="@+id/textusername" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/item_edittext"
                android:paddingStart="@dimen/_3sdp"
                app:layout_constraintTop_toBottomOf="@id/textusername"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start"
                android:id="@+id/username"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_phonen"
                android:textColor="#17335B"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textSize="@dimen/_10sdp"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username"
                android:id="@+id/textnumberphone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/item_edittext"
                android:paddingStart="@dimen/_3sdp"
                app:layout_constraintTop_toBottomOf="@id/textnumberphone"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start"
                android:id="@+id/numberPhone"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#17335B"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textSize="@dimen/_10sdp"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/numberPhone"
                android:id="@+id/textemail" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/item_edittext"
                android:paddingStart="@dimen/_3sdp"
                app:layout_constraintTop_toBottomOf="@id/textemail"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start"
                android:id="@+id/email"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#17335B"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textSize="@dimen/_10sdp"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email"
                android:id="@+id/textpassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/item_edittext"
                android:paddingStart="@dimen/_3sdp"
                app:layout_constraintTop_toBottomOf="@id/textpassword"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start"
                android:id="@+id/password"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="#17335B"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:textSize="@dimen/_10sdp"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password"
                android:id="@+id/textconfirmpassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/item_edittext"
                android:paddingStart="@dimen/_3sdp"
                app:layout_constraintTop_toBottomOf="@id/textconfirmpassword"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start"
                android:id="@+id/confirmpassword"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirmpassword"
                android:layout_marginTop="@dimen/_7sdp"
                android:id="@+id/cheeck"
                android:textSize="@dimen/_10sdp"
                android:text="@string/i_agree_to_the_terms_of_use" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/item_btn_register"
                android:text="@string/registers"
                android:textAllCaps="false"
                android:textColor="#182A41"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:backgroundTintMode="add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cheeck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/l"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/Register"
                android:layout_marginTop="@dimen/_25sdp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/teraninja_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/development_by"
                    android:textSize="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textColor="#18A7E0" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/company_tera_ninja_2022"
                    android:layout_gravity="center"
                    android:textColor="#18A7E0" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>